--- a/canvas.html
+++ b/canvas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebGL</title>
+  <title>WebGL Triangle</title>
 </head>
 <body onload="InitDemo()">
 
@@ -9,8 +9,8 @@
   your browser dono support web gl.
 </canvas>
 <br>
-<b>Triangle using webgl ...<br>
-Can be rotated about its axis using .rotate object and fixing its z-index</b>
+<b>Triangle using webgl ... A framework used is three.js<br>
+Can be rotated about its axis using .rotate object and fixing its z-position</b>
 
 <script type="text/javascript" src="js/canvas.js"></script>
 </body>
